--- a/q/274498.html
+++ b/q/274498.html
@@ -26,13 +26,50 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
-<tr d-ix="1"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
-<tr d-ix="2"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
-<tr d-ix="3"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
-<tr d-ix="4"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
+<tr d-ix="0"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
+<tr d-ix="1"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
+<tr d-ix="2"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
+<tr d-ix="3"><td>021</td><td>K ngn/k</td><td>240728T125025Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274503#274503">akamayu</a></td></tr>
+<tr d-ix="4"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
+<tr d-ix="5"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>800ṗ3S⁼¥Ƈ⁽¥/X
+</code></pre>
+<p>A niladic Link that yields a list of three positive integers less than <span class="math-container">\$801\$</span> that sum to <span class="math-container">\$2048\$</span>.</p>
+<p><a href="https://tio.run/##AR8A4P9qZWxsef//ODAw4bmXM1PigbzCpcaH4oG9wqUvWP//" rel="nofollow noreferrer" title="Jelly – Try It Online">Don't try it online!</a> (it'll time out!)</p>
+<h4>How?</h4>
+<pre><code>800ṗ3S⁼¥Ƈ⁽¥/X - Link: no arguments
+800           - 800
+    3         - three
+   ṗ          - Cartesian power -&gt; all triples of [1..800]
+         ⁽¥/  - 2048
+        Ƈ     - keep those {Triples} for which:
+       ¥      -   last two links as a dyad - f(Triple, 2048)
+     S        -     sum {Triple}
+      ⁼       -     equals {2048}?
+            X - random choice
+</code></pre>
+<hr />
+<h3>Faster at 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h3>
+<pre><code>800X¥ⱮS⁻⁽¥/Ɗ¿3
+</code></pre>
+<p>A niladic Link that yields a list of three positive integers less than <span class="math-container">\$801\$</span> that sum to <span class="math-container">\$2048\$</span>.</p>
+<p><a href="https://tio.run/##ASEA3v9qZWxsef//ODAwWMKl4rGuU@KBu@KBvcKlL8aKwr8z//8" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<h4>How?</h4>
+<pre><code>800X¥ⱮS⁻⁽¥/Ɗ¿3 - Link: no arguments
+            ¿  - while...
+           Ɗ   - ...condition: last three links as a monad - f(Triple, initially 0):
+      S        -      sum {Triple}
+        ⁽¥/    -      2048
+       ⁻       -      not equal?
+     Ɱ       3 - ...do: map across {i in [1..3]} with:
+    ¥          -      last two links as a dyad - f(Triple, i)
+800            -        800
+   X           -        random choice {[1..800]}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 93 bytes</h1>
 <pre><code>=let(f,lambda(f,let(n,map(X1:Z1,lambda(_,int(352*rand()+448))),if(2^11=sum(n),n,f(f)))),f(f))
 </code></pre>
 <p>To ensure there's no bias, get random integers in the range <code>[448..800]</code> and repeat until they add up to 2,048.</p>
@@ -52,20 +89,20 @@
 )
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>APL+WIN, 28 bytes</h1>
+<div id="pu2" class="pu"><h1>APL+WIN, 28 bytes</h1>
 <pre><code>:while 2048≠+/n←3?800
 :end
 n
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv1V5RmZOqoKRgYnFo84F2vp5IEX2FgYGXFapeSlcef@Bqrj@p3EBAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 21 bytes</h1>
 <p>Randomly pick three numbers from <code>[1,800]</code> until the sum is 2048.</p>
 <pre><code>(~2048=+/){1+3?799}/1
 </code></pre>
 <p><a href="https://ngn.bitbucket.io/k#eJzLtNKoMzIwsbDV1tesNtQ2tje3tKzVN+TiSs5ITc62qtZQ0dav0NRRUrBVUNLRB3LBHG0gR6WyVr+iFqrQIZOLi0tfIag0TyE3vyhVoSQzN7VYoSRfoTgjv1yhJCNVoSgxLyU/Ny+1uBiqA7u9Q0UOANs1U9I=" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 65 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;[X=[],1,2].map(i=&gt;n-=X[+i]=Math.random()*801|0)|~n?f(2047):X
 </code></pre>
@@ -80,7 +117,7 @@ f=n=&gt;(a=R())+(b=R())+(c=R())^2048?f():[a,b,c]
 <p><a href="https://tio.run/##LYpBDoIwEADvvmRrKSnGA4qLL/DC1WiyFlAUu4Q2pjG@3UrUuUwymSs9yJmxG7yyXDcxVhiw3JG/pCPZmu8g5rnWMnvpWYsWSyCsQAgJp7/N18eFXubbFsR6T8kpMYfY8ggBdRE2mS6kDMKwddw3ac9nmEYR3zz4bopRKefJ3JTrng2ufnwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Silly. Assumes infinite stack.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 13 bytes</h1>
 <pre><code>800ɾ3↔'∑k¦=;℅
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCI4MDDJvjPihpQn4oiRa8KmPTvihIUiLCIiLCIiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
