--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240728T201455Z
+"   /golfscore                                      20240728T202435Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/118402.html">Tell me my screen resolution!                   : 0118402</a>
+<a href="q/170615.html">Codegolf Rainbow : Draw in Black-and-White      : 0170615</a>
+<a href="q/127185.html">efficient farming                               : 0127185</a>
 <a href="q/274498.html">Three up to 800  sum to 2048                    : 0274498</a>
 <a href="q/274485.html">Find the newest element                         : 0274485</a>
 <a href="q/219810.html">Write an interpreter for interpreter            : 0219810</a>
