--- a/q/274485.html
+++ b/q/274485.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>045</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="0"><td>038</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
 <tr d-ix="1"><td>001</td><td>Japt v2.0a0 h</td><td>240728T183907Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274521#274521">Shaggy</a></td></tr>
 <tr d-ix="2"><td>022</td><td>Excel ms365</td><td>240728T181455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274520#274520">JvdV</a></td></tr>
 <tr d-ix="3"><td>003</td><td>MATL</td><td>240728T173544Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274518#274518">Suever</a></td></tr>
@@ -48,11 +48,11 @@
 <tr d-ix="19"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
 <tr d-ix="20"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 58 </s> 45 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 58  45 </s> 38 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},[...s].map(e=&gt;a[e]?0:a[e]=b=e),b][2]
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;[...s].map(a=e=&gt;a[e]?0:a[e]=b=e)&amp;&amp;b
 </code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/Y1i460ba6VidaT0@vOFYvN7FAI9XWLjE6NdbewApE2SbZpmrqJMVGG8X@T87PK87PSdXLyU/XSNNQd9R1cvRz9AGTfo66Po5O6pqaXOiKgGL/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/Y1i5aT0@vOFYvN7FAI9E21dYuMTo11t7ACkTZJtmmaqqpJf1Pzs8rzs9J1cvJT9dI01B31HVy9HP0AZN@jro@jk7qmppc6IqAYv8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> v2.0a0 <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, 1 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">byte</a></h1>
 <pre><code>â
@@ -222,7 +222,7 @@ last   ; last element of...
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[...new Set(s)].pop()
 </code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/Y1i5aT08vL7VcITi1RKNYM1avIL9AQ/N/cn5ecX5Oql5OfrpGmoaSo66To5@jD5j0c9T1cXRS0tT8DwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@7/Y1i5aT08vL7VcITi1RKNYM1avIL9AQ/N/cn5ecX5Oql5OfrpGmoaSo66To5@jD5j0c9T1cXRS0tT8DwA" rel="noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Commented</h3>
 <pre class="lang-javascript prettyprint-override"><code>s =&gt;         // s = input string
 [...         // turn into an array ...
